corrected spacing of signup button on signup form

--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -348,7 +348,7 @@ footer {
     justify-content: flex-end;
 }
 
-#login-form h1 {
+#login-form h1, #signup-form h1 {
     font-family: 'Bungee Shade', cursive;
     color: var(--lace);
     font-size: 2.5rem;
@@ -399,7 +399,7 @@ footer {
     -webkit-user-select: none;
     touch-action: manipulation;
     height: 2.5rem;
-    margin-left: 7.25rem;
+    margin-left: 4.85rem;
 }
 
 #signup-btn {
